comp-transform/testsuite/good/EvalConstructExample/EvalConstructExampleCompile.golden

comp-transform/testsuite/good/EvalConstructExample/EvalConstructExampleTransform.hs:56:16: error:
    " Couldn't match type Op (Value a1)
                     with Data.Comp.Cxt Data.Comp.NoHole (Value Data.Comp.:+: Op) ()
      Expected type: Sig
        Actual type: Op (Value a1)
    " In the first argument of eval, namely
        (Const 1 `Add` (Const 2 `Mult` Const 2) :: Sig)
      In the expression:
        eval (Const 1 `Add` (Const 2 `Mult` Const 2) :: Sig)
      In an equation for evalEx:
          evalEx = eval (Const 1 `Add` (Const 2 `Mult` Const 2) :: Sig)
   |
56 | evalEx = eval (Const 1 `Add` (Const 2 `Mult` Const 2) :: Sig)
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

comp-transform/testsuite/good/EvalConstructExample/EvalConstructExampleTransform.hs:56:31: error:
    " Couldn't match expected type Value a1
                  with actual type Op (Value a0)
    " In the second argument of Add, namely
        (Const 2 `Mult` Const 2)
      In the first argument of eval, namely
        (Const 1 `Add` (Const 2 `Mult` Const 2) :: Sig)
      In the expression:
        eval (Const 1 `Add` (Const 2 `Mult` Const 2) :: Sig)
   |
56 | evalEx = eval (Const 1 `Add` (Const 2 `Mult` Const 2) :: Sig)
   |                               ^^^^^^^^^^^^^^^^^^^^^^
